# Shapes

./: CMakeLists.txt  Circle.cpp  Circle.hpp  README.md  Rectangle.cpp  Rectangle.hpp  Square.cpp  Square.hpp  encapsulation.cpp  inheritance.cpp  polygons.cpp  polymorphism.cpp  test.cpp  testShapes.cpp
